--- a/ig-and-ik-1000_res.html
+++ b/ig-and-ik-1000_res.html
@@ -6,227 +6,258 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
       <title>Test de la fonction apply-templates</title>
+
       <link rel="stylesheet" type="text/css" href="css/style.css">
+
+      <!-- CDN bootstrap -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
    </head>
    <body>
 
-   <div class="wrapper">
+<div class="container-fluid">
+<div class="row">
 
-      <table class="header">
-         <thead  class="header__title">
+  <!-- first element -->
+   <div class="col-6">
+     <div class='wrapper'>
+        <table class="header">
+           <thead  class="header__title">
+              <tr>
+                 <th>HQ</th>
+                 <th>7 PL</th>
+                 <th>Commissar Yarrick</th>
+              </tr>
+           </thead>
+        </table>
+
+        <table class="name">
+           <tr class="name__head">
+              <td>Unit</td>
+              <td>M</td>
+              <td>WS</td>
+              <td>BS</td>
+              <td>S</td>
+              <td>T</td>
+              <td>W</td>
+              <td>A</td>
+              <td>Ld</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+           </tr>
+           <tr class="name__content">
+              <td>Commissar Yarrick</td>
+              <td>6"</td>
+              <td>2+</td>
+              <td>2+</td>
+              <td>3</td>
+              <td>4</td>
+              <td>4</td>
+              <td>3</td>
+              <td>9</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+           </tr>
+        </table>
+
+        <table class="weapon">
+           <tr class="weapon__head">
+              <td>Weapon</td>
+              <td>Range</td>
+              <td>Type</td>
+              <td>S</td>
+              <td>AP</td>
+              <td>D</td>
+              <td>Abilities</td>
+           </tr>
+           <tr class="weapon__content">
+              <td>Bale Eye</td>
+              <td>6"</td>
+              <td>Pistol 1</td>
+              <td>3</td>
+              <td>-2</td>
+              <td>1</td>
+              <td></td>
+           </tr>
+
+           <tr class="weapon__content weapon__content_grey">
+              <td>Bolt pistol</td>
+              <td>12"</td>
+              <td>Pistol 1</td>
+              <td>4</td>
+              <td>0</td>
+              <td>1</td>
+              <td>-</td>
+           </tr>
+
+           <tr class="weapon__content">
+              <td>Power Klaw</td>
+              <td>-</td>
+              <td>Melee</td>
+              <td>x2</td>
+              <td>-3</td>
+              <td>D3</td>
+              <td>When attacking with this weapon, you must subtract 1 from the hit roll.</td>
+           </tr>
+
+           <tr class="weapon__content weapon__content_grey">
+              <td>Storm bolter</td>
+              <td>24"</td>
+              <td>Rapid Fire 2</td>
+              <td>4</td>
+              <td>0</td>
+              <td>1</td>
+              <td>-</td>
+           </tr>
+        </table>
+
+        <table class="content">
             <tr>
-               <th>HQ</th>
-               <th>7 PL</th>
-               <th>Commissar Yarrick</th>
+              <td>ABILITIES</td>
+              <td>
+                <ul>
+                   <li><b>Aura of Discipline : </b>Any friendly ASTRA MILITARUM units within 6" of a COMMISSAR can use his Leadership instead of their own.
+                   </li>
+                   <li><b>Hero of Hades Hive : </b>You can re-roll hit rolls of 1 made for friendly ASTRA MILITARUM units within 6" of Commissar Yarrick.  You may re-roll and
+                      failed hit rolls for friendly ASTRA MILITARUM units within 6" of Commissar Yarrick when attacking ORK units.
+                   </li>
+                   <li><b>Iron Will : </b>Roll a D6 each time Commissar Yarrick loses his final wound; on a roll of 3+ that wound is not lost.
+                   </li>
+                   <li><b>Power Field : </b>Commisar Yarrick has a 4+ invulnerable save.
+                   </li>
+                   <li><b>Summary Execution : </b>The first time an Astra Militarum unit fails a Morale test during the Morale phase whilst it is within 6" of any friendly
+                      Commissars, you can execute a model. If you do, one model of your choice in that unit is slain and the Morale test is re-
+                      rolled (do not include this slain model when re-rolling the Morale test).
+                   </li>
+                </ul>
+              </td>
             </tr>
-         </thead>
-      </table>
+        </table>
 
-      <table class="name">
-         <tr class="name__head">
-            <td>Unit</td>
-            <td>M</td>
-            <td>WS</td>
-            <td>BS</td>
-            <td>S</td>
-            <td>T</td>
-            <td>W</td>
-            <td>A</td>
-            <td>Ld</td>
-         </tr>
-         <tr class="name__content">
-            <td>Commissar Yarrick</td>
-            <td>6"</td>
-            <td>2+</td>
-            <td>2+</td>
-            <td>3</td>
-            <td>4</td>
-            <td>4</td>
-            <td>3</td>
-            <td>9</td>
-         </tr>
-      </table>
-
-      <table class="weapon">
-         <tr class="weapon__head">
-            <td>Weapon</td>
-            <td>Range</td>
-            <td>Type</td>
-            <td>S</td>
-            <td>AP</td>
-            <td>D</td>
-            <td>Abilities</td>
-         </tr>
-         <tr class="weapon__content">
-            <td>Bale Eye</td>
-            <td>6"</td>
-            <td>Pistol 1</td>
-            <td>3</td>
-            <td>-2</td>
-            <td>1</td>
-            <td></td>
-         </tr>
-
-         <tr class="weapon__content weapon__content_grey">
-            <td>Bolt pistol</td>
-            <td>12"</td>
-            <td>Pistol 1</td>
-            <td>4</td>
-            <td>0</td>
-            <td>1</td>
-            <td>-</td>
-         </tr>
-
-         <tr class="weapon__content">
-            <td>Power Klaw</td>
-            <td>-</td>
-            <td>Melee</td>
-            <td>x2</td>
-            <td>-3</td>
-            <td>D3</td>
-            <td>When attacking with this weapon, you must subtract 1 from the hit roll.</td>
-         </tr>
-
-         <tr class="weapon__content weapon__content_grey">
-            <td>Storm bolter</td>
-            <td>24"</td>
-            <td>Rapid Fire 2</td>
-            <td>4</td>
-            <td>0</td>
-            <td>1</td>
-            <td>-</td>
-         </tr>
-      </table>
-
-      <div class="content">
-         <ul>
-            <li><b>Aura of Discipline : </b>Any friendly ASTRA MILITARUM units within 6" of a COMMISSAR can use his Leadership instead of their own.
-            </li>
-            <li><b>Hero of Hades Hive : </b>You can re-roll hit rolls of 1 made for friendly ASTRA MILITARUM units within 6" of Commissar Yarrick.  You may re-roll and
-               failed hit rolls for friendly ASTRA MILITARUM units within 6" of Commissar Yarrick when attacking ORK units.
-            </li>
-            <li><b>Iron Will : </b>Roll a D6 each time Commissar Yarrick loses his final wound; on a roll of 3+ that wound is not lost.
-            </li>
-            <li><b>Power Field : </b>Commisar Yarrick has a 4+ invulnerable save.
-            </li>
-            <li><b>Summary Execution : </b>The first time an Astra Militarum unit fails a Morale test during the Morale phase whilst it is within 6" of any friendly
-               Commissars, you can execute a model. If you do, one model of your choice in that unit is slain and the Morale test is re-
-               rolled (do not include this slain model when re-rolling the Morale test).
-            </li>
-         </ul>
+        <table class="footer">
+           <tr>
+              <td>KEYWORDS</td>
+              <td>HQ, Officio Prefectus, Astra Militarum, Character, Commissar, Infantry, Imperium, Yarrik</td>
+           </tr>
+        </table>
       </div>
-
-      <table class="footer">
-         <tr>
-            <td>KEYWORDS</td>
-            <td>HQ, Officio Prefectus, Astra Militarum, Character, Commissar, Infantry, Imperium, Yarrik</td>
-         </tr>
-      </table>
    </div>
 
-   <div class="wrapper">
+   <!-- Seconde element -->
+   <div class="col-6">
+     <div class="wrapper">
+        <table class="header">
+           <thead  class="header__title">
+           <tr>
+              <th>HQ</th>
+              <th>3 PL</th>
+              <th>Tempestor Prime</th>
+           </tr>
+           </thead>
+        </table>
 
-      <table class="header">
-         <thead  class="header__title">
-         <tr>
-            <th>HQ</th>
-            <th>3 PL</th>
-            <th>Tempestor Prime</th>
-         </tr>
-         </thead>
-      </table>
+        <table class="name">
+           <tr class="name__head">
+              <td>Unit</td>
+              <td>M</td>
+              <td>WS</td>
+              <td>BS</td>
+              <td>S</td>
+              <td>T</td>
+              <td>W</td>
+              <td>A</td>
+              <td>Ld</td>
+           </tr>
+           <tr class="name__content">
+              <td>Tempestor Prime</td>
+              <td>6"</td>
+              <td>3+</td>
+              <td>3+</td>
+              <td>3</td>
+              <td>3</td>
+              <td>4</td>
+              <td>3</td>
+              <td>8</td>
+           </tr>
+        </table>
 
-      <table class="name">
-         <tr class="name__head">
-            <td>Unit</td>
-            <td>M</td>
-            <td>WS</td>
-            <td>BS</td>
-            <td>S</td>
-            <td>T</td>
-            <td>W</td>
-            <td>A</td>
-            <td>Ld</td>
-         </tr>
-         <tr class="name__content">
-            <td>Tempestor Prime</td>
-            <td>6"</td>
-            <td>3+</td>
-            <td>3+</td>
-            <td>3</td>
-            <td>3</td>
-            <td>4</td>
-            <td>3</td>
-            <td>8</td>
-         </tr>
-      </table>
+        <table class="weapon">
+           <tr class="weapon__head">
+              <td>Weapon</td>
+              <td>Range</td>
+              <td>Type</td>
+              <td>S</td>
+              <td>AP</td>
+              <td>D</td>
+              <td>Abilities</td>
+           </tr>
 
-      <table class="weapon">
-         <tr class="weapon__head">
-            <td>Weapon</td>
-            <td>Range</td>
-            <td>Type</td>
-            <td>S</td>
-            <td>AP</td>
-            <td>D</td>
-            <td>Abilities</td>
-         </tr>
+           <tr class="weapon__content">
+              <td>Frag grenade</td>
+              <td>6"</td>
+              <td>Grenade D6</td>
+              <td>3</td>
+              <td>0</td>
+              <td>1</td>
+              <td>-</td>
+           </tr>
 
-         <tr class="weapon__content">
-            <td>Frag grenade</td>
-            <td>6"</td>
-            <td>Grenade D6</td>
-            <td>3</td>
-            <td>0</td>
-            <td>1</td>
-            <td>-</td>
-         </tr>
+           <tr class="weapon__content weapon__content_grey">
+              <td>Hot-shot Laspistol</td>
+              <td>6"</td>
+              <td>Pistol 1</td>
+              <td>3</td>
+              <td>-2</td>
+              <td>1</td>
+              <td>-</td>
+           </tr>
 
-         <tr class="weapon__content weapon__content_grey">
-            <td>Hot-shot Laspistol</td>
-            <td>6"</td>
-            <td>Pistol 1</td>
-            <td>3</td>
-            <td>-2</td>
-            <td>1</td>
-            <td>-</td>
-         </tr>
+           <tr class="weapon__content">
+              <td>Krak grenade</td>
+              <td>6"</td>
+              <td>Grenade 1</td>
+              <td>6</td>
+              <td>-1</td>
+              <td>D3</td>
+              <td>-</td>
+           </tr>
+        </table>
 
-         <tr class="weapon__content">
-            <td>Krak grenade</td>
-            <td>6"</td>
-            <td>Grenade 1</td>
-            <td>6</td>
-            <td>-1</td>
-            <td>D3</td>
-            <td>-</td>
-         </tr>
-      </table>
+        <div class="content">
+           <ul>
+              <li><b>Aerial Drop : </b>During deployment, you can set up this model in a high altitude transport, ready to deploy via grav-chute, instead of placing
+                 it on the battlefield.  At the end of any of your movement phases the model can make an aerial drop - set it up anywhere on
+                 the battlefield that is more than 9" away from any enemy models.
+              </li>
+              <li><b>Voice of Command : </b>This unit may issue one order per turn to the soldiers under their command at the start of their Shooting phase. Orders may
+                 only be issued to INFANTRY units within 6" of this unit that have the same &lt;REGIMENT&gt; keyword as this unit. To issue an order,
+                 pick a target unit and choose which order you wish to issue from the table below. A unit may only be affected by one order
+                 per turn.
+              </li>
+           </ul>
+        </div>
 
-      <div class="content">
-         <ul>
-            <li><b>Aerial Drop : </b>During deployment, you can set up this model in a high altitude transport, ready to deploy via grav-chute, instead of placing
-               it on the battlefield.  At the end of any of your movement phases the model can make an aerial drop - set it up anywhere on
-               the battlefield that is more than 9" away from any enemy models.
-            </li>
-            <li><b>Voice of Command : </b>This unit may issue one order per turn to the soldiers under their command at the start of their Shooting phase. Orders may
-               only be issued to INFANTRY units within 6" of this unit that have the same &lt;REGIMENT&gt; keyword as this unit. To issue an order,
-               pick a target unit and choose which order you wish to issue from the table below. A unit may only be affected by one order
-               per turn.
-            </li>
-         </ul>
-      </div>
+        <table class="footer">
+           <tr>
+              <td>KEYWORDS</td>
+              <td>Tempestus Scions, Astra Militarum, HQ, Imperium, Infantry, Character, Officer, Tempestor Prime, Militarum Tempestus</td>
+           </tr>
+        </table>
+     </div>
+  </div>
+</div>
 
-      <table class="footer">
-         <tr>
-            <td>KEYWORDS</td>
-            <td>Tempestus Scions, Astra Militarum, HQ, Imperium, Infantry, Character, Officer, Tempestor Prime, Militarum Tempestus</td>
-         </tr>
-      </table>
-   </div>
-
-   <div class="wrapper">
-
+<div class="row">
+  <div class="col-6">
+    <div class="wrapper">
       <table class="header">
          <thead  class="header__title">
          <tr>
@@ -309,4 +340,7 @@
          </tr>
       </table>
    </div>
+  </div>
+</div>
+</div>
 </html>
