Ajout des images pour remplacer le power et les roles des unités

--- a/ig-and-ik-1000_res.html
+++ b/ig-and-ik-1000_res.html
@@ -24,9 +24,9 @@
         <table class="header">
            <thead  class="header__title">
               <tr>
-                 <th>HQ</th>
-                 <th>7 PL</th>
-                 <th>Commissar Yarrick</th>
+                 <th class="icon-role"><img src="img/QG.png" width="60" height="60" alt="QG" /></th>
+                 <th class="icon-power"><img src="img/power.png" width="60" height="60" alt="7 PL" /><span>7</span></th>
+                 <th class="unit-title">Commissar Yarrick</th>
               </tr>
            </thead>
         </table>
@@ -121,7 +121,7 @@
 
         <table class="content">
             <tr>
-              <td>ABILITIES</td>
+              <td>ABILITIES&nbsp;&nbsp;&nbsp;</td>
               <td>
                 <ul>
                    <li><b>Aura of Discipline : </b>Any friendly ASTRA MILITARUM units within 6" of a COMMISSAR can use his Leadership instead of their own.
@@ -157,9 +157,9 @@
         <table class="header">
            <thead  class="header__title">
            <tr>
-              <th>HQ</th>
-              <th>3 PL</th>
-              <th>Tempestor Prime</th>
+              <th class="icon-role"><img src="img/QG.png" width="60" height="60" alt="QG" /></th>
+              <th class="icon-power"><img src="img/power.png" width="60" height="60" alt="3 PL" /><span>3</span></th>
+              <th class="unit-title">Tempestor Prime</th>
            </tr>
            </thead>
         </table>
@@ -175,6 +175,12 @@
               <td>W</td>
               <td>A</td>
               <td>Ld</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
            </tr>
            <tr class="name__content">
               <td>Tempestor Prime</td>
@@ -231,19 +237,24 @@
            </tr>
         </table>
 
-        <div class="content">
-           <ul>
-              <li><b>Aerial Drop : </b>During deployment, you can set up this model in a high altitude transport, ready to deploy via grav-chute, instead of placing
-                 it on the battlefield.  At the end of any of your movement phases the model can make an aerial drop - set it up anywhere on
-                 the battlefield that is more than 9" away from any enemy models.
-              </li>
-              <li><b>Voice of Command : </b>This unit may issue one order per turn to the soldiers under their command at the start of their Shooting phase. Orders may
-                 only be issued to INFANTRY units within 6" of this unit that have the same &lt;REGIMENT&gt; keyword as this unit. To issue an order,
-                 pick a target unit and choose which order you wish to issue from the table below. A unit may only be affected by one order
-                 per turn.
-              </li>
-           </ul>
-        </div>
+        <table class="content">
+            <tr>
+              <td>ABILITIES&nbsp;&nbsp;&nbsp;</td>
+              <td>
+                <ul>
+                  <li><b>Aerial Drop : </b>During deployment, you can set up this model in a high altitude transport, ready to deploy via grav-chute, instead of placing
+                     it on the battlefield.  At the end of any of your movement phases the model can make an aerial drop - set it up anywhere on
+                     the battlefield that is more than 9" away from any enemy models.
+                  </li>
+                  <li><b>Voice of Command : </b>This unit may issue one order per turn to the soldiers under their command at the start of their Shooting phase. Orders may
+                     only be issued to INFANTRY units within 6" of this unit that have the same &lt;REGIMENT&gt; keyword as this unit. To issue an order,
+                     pick a target unit and choose which order you wish to issue from the table below. A unit may only be affected by one order
+                     per turn.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+        </table>
 
         <table class="footer">
            <tr>
@@ -261,9 +272,9 @@
       <table class="header">
          <thead  class="header__title">
          <tr>
-            <th colspan="1">Troops</th>
-            <th colspan="1">3 PL</th>
-            <th colspan="7">Conscripts</th>
+            <th class="icon-role"><img src="img/Troupe.png" width="60" height="60" alt="QG" /></th>
+            <th class="icon-power"><img src="img/power.png" width="60" height="60" alt="3 PL" /><span>3</span></th>
+            <th class="unit-title">Conscripts</th>
          </tr>
          </thead>
       </table>
@@ -279,6 +290,12 @@
             <td>W</td>
             <td>A</td>
             <td>Ld</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
          </tr>
          <tr class="name__content">
             <td>Conscript</td>
@@ -325,13 +342,18 @@
          </tr>
       </table>
 
-      <div class="content">
-         <ul>
-            <li><b>Raw Recruits : </b>Roll a D6 each time an OFFICER uses the Voice of Command ability to issue an order to this unit; on a 4+ the order applies
-               as normal, otherwise the order has no effect and no other orders can be issued to this unit for the rest of the turn.
-            </li>
-         </ul>
-      </div>
+      <table class="content">
+          <tr>
+            <td>ABILITIES&nbsp;&nbsp;&nbsp;</td>
+            <td>
+              <ul>
+                <li><b>Raw Recruits : </b>Roll a D6 each time an OFFICER uses the Voice of Command ability to issue an order to this unit; on a 4+ the order applies
+                   as normal, otherwise the order has no effect and no other orders can be issued to this unit for the rest of the turn.
+                </li>
+              </ul>
+            </td>
+          </tr>
+      </table>
 
       <table class="footer">
          <tr>
