Ajout de la classe Bold

--- a/ig-and-ik-1000_res.html
+++ b/ig-and-ik-1000_res.html
@@ -123,7 +123,7 @@
 
         <table class="content">
           <tr>
-            <td>ABILITIES&nbsp;&nbsp;&nbsp;</td>
+            <td>ABILITIES&nbsp;&nbsp;&nbsp;&nbsp;</td>
             <td>
               <ul>
                 <li><b>Aura of Discipline : </b>Any friendly ASTRA MILITARUM units within 6" of a COMMISSAR can use his
